# rust_newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.endtoend  Makefile  README.md  diesel.toml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  enhancement_request.md  feature_request.md  general.md
.github/workflows/: testing.yml
db/: schema.sql
db/migrations/2024-08-22-011135_create_subscriptions/: up.sql
lib/: libs.rs
lib/adapter/: configuration.rs  configuration_test.rs  mod.rs  models.rs  repository.rs  repository_test.rs
lib/domain/: errors.rs
lib/port/: models.rs
lib/routes/: app.rs  echo.rs  health_check.rs  mod.rs  subscriptions.rs
src/: main.rs
tests/: health_check.rs  subscription.rs
tests/common/: helper.rs
tests/end_to_end/: mod.rs  test_subscription.rs
tests/integration/: mod.rs  test_echo_endpoint.rs  test_subscription.rs
